--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-flagkit": "^2.0.4"
+    "react-flagkit": "^2.0.4",
+    "react-social-icons": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
